--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "mongoose": "^5.0.0-rc2",
     "nodemon": "^1.14.7",
     "supertest": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   }
 }
